--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -23,6 +23,7 @@ jobs:
       - checkout
       - run: git submodule sync
       - run: git submodule update --init
+      - run: make source-key
       - restore_cache:
           name: restore go cache
           keys:
@@ -88,30 +89,31 @@ jobs:
       - checkout
       - run: git submodule sync
       - run: git submodule update --init
+      - run: make source-key
       - run: make -C area/apps save-config
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-apps-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-apps-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-apps-go-cache-
       - run: make clean
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-apps-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-apps-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
-            - infraops-apps-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-apps-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-apps-go-build-cache-
       - run: make clean
       - run: make pulumi-login
       - run: make area=apps pulumi-preview
       - save_cache:
           name: save go build cache
-          key: infraops-apps-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-apps-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/.cache/go-build
     resource_class: large
@@ -123,24 +125,24 @@ jobs:
       - checkout
       - run: git submodule sync
       - run: git submodule update --init
-      - run: make pull
+      - run: make source-key
       - run: make -C area/apps save-config
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-apps-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-apps-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-apps-go-cache-
       - run: make clean
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-apps-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-apps-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
-            - infraops-apps-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-apps-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-apps-go-build-cache-
       - run: make clean
       - run: make pulumi-login
@@ -150,7 +152,7 @@ jobs:
       - run: make -C area/apps lint
       - save_cache:
           name: save go build cache
-          key: infraops-apps-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-apps-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/.cache/go-build
     resource_class: large
@@ -163,29 +165,30 @@ jobs:
       - checkout
       - run: git submodule sync
       - run: git submodule update --init
+      - run: make source-key
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-cf-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-cf-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-cf-go-cache-
       - run: make clean
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-cf-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-cf-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
-            - infraops-cf-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-cf-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-cf-go-build-cache-
       - run: make clean
       - run: make pulumi-login
       - run: make area=cf pulumi-preview
       - save_cache:
           name: save go build cache
-          key: infraops-cf-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-cf-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/.cache/go-build
     resource_class: large
@@ -197,30 +200,30 @@ jobs:
       - checkout
       - run: git submodule sync
       - run: git submodule update --init
-      - run: make pull
+      - run: make source-key
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-cf-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-cf-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-cf-go-cache-
       - run: make clean
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-cf-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-cf-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
-            - infraops-cf-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-cf-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-cf-go-build-cache-
       - run: make clean
       - run: make pulumi-login
       - run: make area=cf pulumi-update
       - save_cache:
           name: save go build cache
-          key: infraops-cf-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-cf-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/.cache/go-build
     resource_class: large
@@ -236,26 +239,26 @@ jobs:
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-do-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-do-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-do-go-cache-
       - run: make clean
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-do-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-do-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
-            - infraops-do-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-do-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-do-go-build-cache-
       - run: make clean
       - run: make pulumi-login
       - run: make area=do pulumi-preview
       - save_cache:
           name: save go build cache
-          key: infraops-do-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-do-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/.cache/go-build
     resource_class: large
@@ -267,30 +270,30 @@ jobs:
       - checkout
       - run: git submodule sync
       - run: git submodule update --init
-      - run: make pull
+      - run: make source-key
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-do-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-do-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-do-go-cache-
       - run: make clean
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-do-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-do-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
-            - infraops-do-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-do-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-do-go-build-cache-
       - run: make clean
       - run: make pulumi-login
       - run: make area=do pulumi-update
       - save_cache:
           name: save go build cache
-          key: infraops-do-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-do-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/.cache/go-build
     resource_class: large
@@ -306,26 +309,26 @@ jobs:
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-gh-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-gh-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-gh-go-cache-
       - run: make clean
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-gh-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-gh-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
-            - infraops-gh-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-gh-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-gh-go-build-cache-
       - run: make clean
       - run: make pulumi-login
       - run: make area=gh pulumi-preview
       - save_cache:
           name: save go build cache
-          key: infraops-gh-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-gh-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/.cache/go-build
     resource_class: large
@@ -337,30 +340,30 @@ jobs:
       - checkout
       - run: git submodule sync
       - run: git submodule update --init
-      - run: make pull
+      - run: make source-key
       - restore_cache:
           name: restore deps
           keys:
-            - infraops-gh-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-gh-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-gh-go-cache-
       - run: make clean
       - run: make dep
       - save_cache:
           name: save deps
-          key: infraops-gh-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-gh-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
-            - infraops-gh-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - infraops-gh-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - infraops-gh-go-build-cache-
       - run: make clean
       - run: make pulumi-login
       - run: make area=gh pulumi-update
       - save_cache:
           name: save go build cache
-          key: infraops-gh-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+          key: infraops-gh-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
           paths:
             - ~/.cache/go-build
     resource_class: large
