refactor(style): remove wsl and nlreturn

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,8 +1,6 @@
 version: "2"
 linters:
   default: all
-  enable:
-    - wsl_v5
   disable:
     - bodyclose
     - depguard
@@ -14,6 +12,7 @@ linters:
     - mnd
     - nakedret
     - nilnil
+    - nlreturn
     - noinlineerr
     - nonamedreturns
     - paralleltest
@@ -22,13 +21,10 @@ linters:
     - varnamelen
     - wrapcheck
     - wsl
+    - wsl_v5
   settings:
     lll:
-      line-length: 180
-    wsl_v5:
-      allow-first-in-block: true
-      allow-whole-block: false
-      branch-max-lines: 2
+      line-length: 130
   exclusions:
     generated: lax
     presets:
