--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -17,8 +17,10 @@ parameters:
 jobs:
   build:
     docker:
-      - image: alexfalkowski/go:2.55
+      - image: alexfalkowski/go:2.56
     working_directory: ~/infraops
+    environment:
+      GOGC: 10
     steps:
       - checkout
       - run: git submodule sync
@@ -71,7 +73,7 @@ jobs:
     resource_class: large
   version:
     docker:
-      - image: alexfalkowski/release:5.9
+      - image: alexfalkowski/release:5.11
     working_directory: ~/infraops
     steps:
       - checkout
@@ -82,7 +84,7 @@ jobs:
 
   apps_preview:
     docker:
-      - image: alexfalkowski/k8s:1.94
+      - image: alexfalkowski/k8s:1.96
     working_directory: ~/infraops
     steps:
       - checkout
@@ -118,7 +120,7 @@ jobs:
     resource_class: large
   apps_update:
     docker:
-      - image: alexfalkowski/k8s:1.94
+      - image: alexfalkowski/k8s:1.96
     working_directory: ~/infraops
     steps:
       - checkout
@@ -158,7 +160,9 @@ jobs:
 
   cf_preview:
     docker:
-      - image: alexfalkowski/k8s:1.94
+      - image: alexfalkowski/k8s:1.96
+    environment:
+      GOGC: 10
     working_directory: ~/infraops
     steps:
       - checkout
@@ -193,7 +197,7 @@ jobs:
     resource_class: large
   cf_update:
     docker:
-      - image: alexfalkowski/k8s:1.94
+      - image: alexfalkowski/k8s:1.96
     working_directory: ~/infraops
     steps:
       - checkout
@@ -229,7 +233,7 @@ jobs:
 
   do_preview:
     docker:
-      - image: alexfalkowski/k8s:1.94
+      - image: alexfalkowski/k8s:1.96
     working_directory: ~/infraops
     steps:
       - checkout
@@ -264,7 +268,7 @@ jobs:
     resource_class: large
   do_update:
     docker:
-      - image: alexfalkowski/k8s:1.94
+      - image: alexfalkowski/k8s:1.96
     working_directory: ~/infraops
     steps:
       - checkout
@@ -300,7 +304,7 @@ jobs:
 
   gh_preview:
     docker:
-      - image: alexfalkowski/k8s:1.94
+      - image: alexfalkowski/k8s:1.96
     working_directory: ~/infraops
     steps:
       - checkout
@@ -335,7 +339,7 @@ jobs:
     resource_class: large
   gh_update:
     docker:
-      - image: alexfalkowski/k8s:1.94
+      - image: alexfalkowski/k8s:1.96
     working_directory: ~/infraops
     steps:
       - checkout
