--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -72,6 +72,17 @@ jobs:
           path: test/reports
       - run: make codecov-upload
     resource_class: large
+  sync:
+    docker:
+      - image: alexfalkowski/go:2.65
+    working_directory: ~/infraops
+    steps:
+      - checkout:
+          method: blobless
+      - run: git submodule sync
+      - run: git submodule update --init
+      - run: make sync push
+    resource_class: large
   version:
     docker:
       - image: alexfalkowski/release:5.16
@@ -387,6 +398,12 @@ workflows:
   infraops:
     jobs:
       - build
+      - sync:
+          requires:
+            - build
+          filters:
+            branches:
+              ignore: master
       - version:
           serial-group: << pipeline.project.slug >>/release
           requires:
