--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -74,7 +74,7 @@ jobs:
     resource_class: large
   sync:
     docker:
-      - image: alexfalkowski/go:2.65
+      - image: alexfalkowski/release:5.16
     working_directory: ~/infraops
     steps:
       - checkout:
