feat(k8s): add better stack collector
https://betterstack.com/docs/logs/collector/#install-via-kubernetes-helm-chart

--- a/area/k8s/Makefile
+++ b/area/k8s/Makefile
@@ -14,6 +14,7 @@ setup-helm:
 	@helm repo add nginx https://kubernetes.github.io/ingress-nginx
 	@helm repo add circleci https://circleci-public.github.io/cci-k8s-release-agent
 	@helm repo add metrics-server https://kubernetes-sigs.github.io/metrics-server/
+	@helm repo add better-stack https://betterstackhq.github.io/collector-helm-chart
 	@helm repo update
 
 # Install circleci.
@@ -28,8 +29,12 @@ install-metrics-server:
 install-nginx-ingress:
 	@helm upgrade --install nginx-ingress-release nginx/ingress-nginx --namespace nginx-ingress --create-namespace --version 4.14.0 -f nginx/values.yaml
 
+# Install better stack.
+install-better-stack:
+	@helm upgrade --install better-stack-release better-stack/collector --set collector.env.COLLECTOR_SECRET=$(BETTER_STACK_COLLECTOR_SECRET) --create-namespace --namespace better-stack --version v0.1.21
+
 # Install helm.
-install-helm: install-circleci install-metrics-server install-nginx-ingress
+install-helm: install-circleci install-metrics-server install-nginx-ingress install-better-stack
 
 # All pods.
 pods:
