build(ci): add GOGC: 10 for cf_update

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -214,6 +214,8 @@ jobs:
   cf_update:
     docker:
       - image: alexfalkowski/k8s:2.6
+    environment:
+      GOGC: 10
     working_directory: ~/infraops
     steps:
       - checkout:
