build(ci): try GOEXPERIMENT: greenteagc

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -21,6 +21,7 @@ jobs:
     working_directory: ~/infraops
     environment:
       GOGC: 10
+      GOEXPERIMENT: greenteagc
     steps:
       - checkout:
           method: blobless
@@ -182,6 +183,7 @@ jobs:
       - image: alexfalkowski/k8s:2.9
     environment:
       GOGC: 9
+      GOEXPERIMENT: greenteagc
     working_directory: ~/infraops
     steps:
       - checkout:
@@ -220,6 +222,7 @@ jobs:
       - image: alexfalkowski/k8s:2.9
     environment:
       GOGC: 9
+      GOEXPERIMENT: greenteagc
     working_directory: ~/infraops
     steps:
       - checkout:
